implement sharelink feature
